--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -109,3 +109,6 @@ ul li a {
   font-size: 17px;
   /* font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
 }
+.header nav ul li a:hover {
+  color: red;
+}
